# pdf-tool

./: AGENTS.md  README.md  main.py  pdf_tool.spec  pyproject.toml
core/: pdf_compressor.py  pdf_converter.py  pdf_operations.py  pdf_reader.py  pdf_security.py
ui/: main_window.py  presentation.py  resizable_panel.py  sidebar.py  statusbar.py  toolbar.py  viewer.py
utils/: fonts.py
