[project]
name = "pdf-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "customtkinter>=6.0.0",
    "pikepdf>=10.9.1",
    "pillow>=12.3.0",
    "pymupdf>=1.28.0",
    "reportlab>=5.0.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
